# pydantic_ai_claude_code

./: .bumpversion.toml  .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PR_SUMMARY.md  README.md  debug_multiple_tools.py  debug_response_saving.py  pyproject.toml  test_timeout_fix.py  test_timeout_integration.py
.claude/: settings.json
.claude/agents/: routing-agent.md
.claude/hooks/: block-destructive-commands.sh  collective-metrics.sh  directive-enforcer.sh  load-behavioral-system.sh  routing-executor.sh  test-driven-handoff.sh
.claude/skills/: pr-implementation.skill
bug/: BUG_REPORT.md  README.md  standalone_reproduce.py
bug_report/: bug_report_pydantic_ai_claude_code.md  test_ref_bug.py
examples/: additional_files_example.py  advanced_example.py  async_example.py  basic_example.py  binary_content_example.py  kimi_moonshot_example.py  law_school_landing.html  law_school_landing_example.py  long_response_example.py  sandbox_example.py  show_structure_instructions.py  structured_example.py  tools_and_streaming.py  websearch_duckduckgo_example.py  websearch_example.py
experiments/: debug_test_profile.py  debug_test_profile_filesystem.py  debug_test_profile_filesystem2.py
refactoring/: PRECISE_MAPPING.md  PROTOCOL.md  REFACTORING_PLAN.md
src/pydantic_ai_claude_code/: __init__.py  cc_tools.py  exceptions.py  logging_utils.py  messages.py  model.py  provider.py  provider_presets.py  providers.yaml  registration.py  response_utils.py  sdk_adapter.py  streamed_response.py  streaming.py  structure_converter.py  structured_output.py  temp_path_utils.py  tools.py  types.py  utils.py  utils_legacy.py
src/pydantic_ai_claude_code/_sdk/: __init__.py  errors.py  types.py
src/pydantic_ai_claude_code/_utils/: __init__.py  file_utils.py  json_utils.py  type_utils.py
src/pydantic_ai_claude_code/core/: __init__.py  debug_saver.py  oauth_handler.py  retry_logic.py  sandbox_runtime.py
src/pydantic_ai_claude_code/sdk_original_files/: UPDATE_TRACKING.md  __init__.py
src/pydantic_ai_claude_code/structured/: __init__.py  converter.py  file_handler.py  function_selector.py
src/pydantic_ai_claude_code/tools/: __init__.py  mcp.py
src/pydantic_ai_claude_code/transport/: __init__.py  sdk_transport.py
tests/: README_NEW_TESTS.md  __init__.py  test_additional_files.py  test_basic.py  test_binary_content.py  test_binary_content_integration.py  test_cc_tools.py  test_core_modules.py  test_coverage.py  test_long_responses.py  test_long_responses_integration.py  test_mcp_tool.py  test_messages.py  test_provider_presets.py  test_response_saving.py  test_sandbox.py  test_sdk_adapter.py  test_sdk_types.py  test_streaming_behavior.py  test_structure_converter.py  test_structured_modules.py  test_structured_output.py  test_tools.py  test_transport_module.py  test_unstructured_debug.py  test_unstructured_output.py  test_utils.py  test_utils_modules.py
