[project]
name = "pydantic-ai-claude-code"
version = "0.2.1"
description = "Use local Claude Code CLI as a Pydantic AI model provider with full support for structured responses, tools, and streaming"
readme = "README.md"
authors = [
    { name = "mark", email = "wernsdorfer@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.9",
    "pydantic-ai>=1.0.15",
]
keywords = ["pydantic", "pydantic-ai", "claude", "claude-code", "ai", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/wehnsdaefflae/pydantic_ai_claude_code"
Documentation = "https://github.com/wehnsdaefflae/pydantic_ai_claude_code#readme"
Repository = "https://github.com/wehnsdaefflae/pydantic_ai_claude_code"
Issues = "https://github.com/wehnsdaefflae/pydantic_ai_claude_code/issues"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
